HW6. Finished search boxes

--- a/Practice/HW6/css/style.css
+++ b/Practice/HW6/css/style.css
@@ -150,11 +150,11 @@ body {
     height: 25px;
 }
 
-.main_menu li {
+.main_menu__item {
     display: inline-block;
 }
 
-.main_menu-item {
+.main_menu__link {
     display: block;
     text-transform: uppercase;
     text-decoration: none;
@@ -166,7 +166,7 @@ body {
     letter-spacing: -0.02em;
 }
 
-.main_menu-item:hover {
+.main_menu__link:hover {
     border-radius: 50px;
     background: -moz-linear-gradient( -90deg, rgb(32,105,136) 0%, rgb(17,65,101) 59%, rgb(15,58,94) 85%, rgb(12,50,86) 100%);
     background: -webkit-linear-gradient( -90deg, rgb(32,105,136) 0%, rgb(17,65,101) 59%, rgb(15,58,94) 85%, rgb(12,50,86) 100%);
@@ -230,318 +230,4 @@ body {
     margin-right: 7px;
 }
 
-/*SEARCH*/
-.search_wrapper {
-    margin: 10px 4px;
-}
-        /*базовый стиль для блоков поиска*/
-.search_box {
-    position: relative;
-    border: 1px solid  rgb(156, 156, 157);
-    box-shadow: 0px 5px 5px 0px rgba(150, 150, 150, 0.75);
-    background-color: rgb(255, 255, 255);
-}
 
-        /*базовый стиль для навзаний блоков поиска*/
-.search_box__name {
-    position: absolute;
-    font-family: "Arial Black";
-    font-size: 12px;
-    color: #154467;
-}
-
-        /*базовый стиль для ссылки "поиск"*/
-.search_link {
-    position: absolute;
-    bottom: 8px;
-    right: 19px;
-    border-bottom: 1px solid #154467;
-    color: #154467;
-    font-family: Arial, sans-serif;
-    font-style: italic;
-    font-size: 14px;
-    text-decoration: none;
-    letter-spacing: 0.025em;
-    height: 15px;
-}
-
-/*базовый стиль для названия выпадающего списка*/
-.search_options__name {
-    position: relative;
-    font-family: Arial, sans-serif;
-    font-size: 10px;
-}
-/*базовый стиль для подназвания выпадающего списка*/
-.search_options__subname {
-    font-family: Arial, sans-serif;
-    font-size: 10px;
-    color: #77858b;
-    letter-spacing: -0.07em;
-}
-/*базовый стиль для выпадающего списка*/
-.search_options_variant_select  {
-    height: 17px;
-    width: 102px;
-    padding: 0;
-    box-shadow: inset 0px 1px 1px 0px rgba(0, 0, 0, 0.75);
-    background: url("../img/select_arrow.png") no-repeat right center;
-    font-size: 11px;
-}
-
-
- /*Поис по автомобилю*/
-.search_box--po-avto {
-    position: relative;
-    margin-top: 1px;
-    float: left;
-    width: 413px;
-    height: 132px;
-    border-radius: 17px;
-    box-shadow: 0px 5px 5px 0px rgba(104, 104, 104, 0.75);
-}
-
-.search_box__name-po-avto {
-    top: 1px;
-    left: 125px;
-    letter-spacing: 0.027em;
-}
-
-.search_box__name-po-avto--discs,
-.search_box__name-po-avto--tires {
-    position: absolute;
-    font-size: 10px;
-    letter-spacing: 0.025em
-}
-
-.search_box__name-po-avto--discs {
-    top: 4px;
-    left: 20px;
-}
-
-.search_box__name-po-avto--tires {
-    top: 2px;
-    right: 20px;
-}
-
-.search_box__name-po-avto--discs + .search_options {
-    position: absolute;
-    top: 15px;
-}
-
-.search_box__name-po-avto--tires + .search_options {
-    position: absolute;
-    top: 13px;
-    left: 205px;
-}
-
- /*параметры поиска Диски*/
-.search_options__list{
-    margin-top: 4px;
-    margin-left: 17px;
-    width: 200px;
-}
-
-.search_options_item {
-    float: left;
-    clear: both;
-    width: 66px;
-    text-align: left;
-    margin-right: 10px;
-    position: relative;
-    top: 1px;
-}
-
-
-.search_options_variant {
-    margin-bottom: 2px;
-}
-
-.search_options__name--marka {
-    letter-spacing: 0.03em;
-}
-
-.search_options__name--marka_subname {
-    letter-spacing: -0.07em;
-}
-
-
-.search_options__name--model {
-    top: -3px;
-    letter-spacing: 0.04em;
-}
-
-.search_options__name--model_subname {
-    position: relative;
-    top: -11px;
-    letter-spacing: -0.03em;
-}
-
-.search_options_variant--model {
-    position: relative;
-    top: 3px;
-}
-
-.search_options__name--year {
-    top: -13px;
-    letter-spacing: 0.04em;
-}
-.search_options__name--year_subname {
-    position: relative;
-    top: -21px;
-    letter-spacing: -0.03em;
-}
-
-.search_options_variant--year{
-    position: relative;
-    top: 5px;
-    width: 58px;
-}
-
-.search_options__name--komplect {
-    top: -19px;
-    letter-spacing: 0.03em;
-}
-
-.search_options_variant--komplect {
-    position: relative;
-    top: 8px;
-}
-
-/*Поиск шин*/
-
-.search_box--tires {
-    position: relative;
-    float: left;
-    margin-left: 14px;
-    width: 191px;
-    height: 134px;
-    border-radius: 18px;
-    letter-spacing: 0.026em;
-}
-
-.search_box__name--tires {
-    top: 3px;
-    left: 9px;
-    letter-spacing: -0.001em;
-}
-
-.search_link-tires {
-    bottom: 9px;
-    right: 17px;
-}
-
-.search_box--tires .search_options {
-    margin-top: 16px;
-    margin-left: -4px;
-    width: 165px;
-}
-.search_options_item--tires {
-    float: left;
-    clear: both;
-    width: 36px;
-    text-align: left;
-    margin-right: 10px;
-    position: relative;
-    top: 1px;
-}
-
-.search_options_item--size {
-    /*margin-top: 21px;
-    margin-left: 19px;*/
-}
-
-.search_options__name--size {
-    top: 8px;
-    letter-spacing: 0.03em;
-}
-
-.search_options_variant--size {
-    width: 51px;
-    margin-top: 6px;
-}
-
-.search_options_variant--width {
-    width: 50px;
-}
-
-.search_options_variant--radius {
-    margin-top: 6px;
-    width: 45px;
-}
-.search_options__name--radius {
-    top: 6px;
-    left: 32px;
-    font-size: 11px;
-}
-
-.search_options__name--seazon {
-    top: -3px;
-}
-
-.search_options_variant__checkbox {
-    font-size: 13px;
-    letter-spacing: 0.025em;
-}
-
-.search_options_variant--summer {
-    position: absolute;
-    top: 68px;
-    left: 54px;
-    font-size: 12px;
-}
-
-.search_options_variant__checkbox--summer{
-    position: relative;
-    top: 1px;
-    left: 13px;
-}
-
-.search_options_variant--winter {
-    position: absolute;
-    top: 82px;
-    left: 54px;
-    font-size: 12px;
-}
-
-.search_options_variant__checkbox--winter{
-    position: relative;
-    top: 16px;
-    left: -18px;
-}
-
-.search_options_variant--vsesez {
-    position: absolute;
-    top: 96px;
-    left: 54px;
-
-}
-
-.search_options_variant__checkbox--vsesez{
-    position: relative;
-    top: 29px;
-    left: -49px;
-}
-
-
-
-
-/*Поиск дисков*/
-.search_box--discs{
-    float: left;
-    margin-left: 10px;
-    width: 266px;
-    height: 133px;
-    border-radius: 16px;
-}
-
-.search_box__name--discs {
-    top: 2px;
-    left: 8px;
-    font-size: 13px;
-    letter-spacing: 0.022em;
-}
-
-.search_link-discs {
-    bottom: 8px;
-    right: 18px;
-}
